--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.8.6",
     "react-event-timeline": "^1.6.3",
+    "react-ga": "^2.6.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
     "react-responsive-picture": "^3.1.1",
