--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-ga": "^2.6.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
+    "react-lazyload": "^2.6.2",
     "react-responsive-picture": "^3.1.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
