--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-lazyload": "^2.6.2",
     "react-responsive-picture": "^3.1.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.3.0",
     "react-scroll-parallax": "^2.1.2"
   },
   "scripts": {
