--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,11 @@
   "extends": ["airbnb", "prettier"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": ["error"]
+    "prettier/prettier": ["error"],
+    "no-unused-vars": "warn"
+  },
+  "parserOptions": {
+    "ecmaVersion": 2020
   },
   "env": {
     "browser": true
