--- a/package.json
+++ b/package.json
@@ -2,30 +2,12 @@
   "name": "wsf-portfolio",
   "version": "1.0.0",
   "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.1.3",
-    "@material-ui/icons": "^4.2.1",
-    "google-map-react": "^1.1.4",
-    "lodash": "^4.17.21",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^16.8.6",
-    "react-event-timeline": "^1.6.3",
-    "react-ga": "^2.6.0",
-    "react-helmet": "^5.2.1",
-    "react-icons": "^3.7.0",
-    "react-lazyload": "^2.6.2",
-    "react-responsive-carousel": "^3.2.9",
-    "react-responsive-picture": "^3.1.1",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "^4.0.0",
-    "react-scroll-parallax": "^2.1.2"
-  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "lighthouse": "lhci autorun",
+    "local-build": "http-server ./build -p 4000",
     "cypress:open": "./node_modules/.bin/cypress open",
     "eject": "react-scripts eject"
   },
@@ -43,6 +25,28 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "dependencies": {
+    "@lhci/cli": "^0.9.0",
+    "@material-ui/core": "^4.1.3",
+    "@material-ui/icons": "^4.2.1",
+    "google-map-react": "^1.1.4",
+    "http-server": "^14.1.0",
+    "lodash": "^4.17.21",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.6",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-dom": "^16.8.6",
+    "react-event-timeline": "^1.6.3",
+    "react-ga": "^2.6.0",
+    "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0",
+    "react-lazyload": "^2.6.2",
+    "react-responsive-carousel": "^3.2.9",
+    "react-responsive-picture": "^3.1.1",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^4.0.0",
+    "react-scroll-parallax": "^2.1.2"
   },
   "devDependencies": {
     "cypress": "^4.12.1",
