update workflow to install http-server globablly

--- a/.github/workflows/lighthouse-action.yml
+++ b/.github/workflows/lighthouse-action.yml
@@ -16,5 +16,5 @@ jobs:
           npm run build
       - name: run Lighthouse CI
         run: |
-          npm install -g @lhci/cli@0.8.x
+          npm install -g http-server @lhci/cli@0.8.x
           lhci autorun
