--- a/.github/workflows/lighthouse-action.yml
+++ b/.github/workflows/lighthouse-action.yml
@@ -18,3 +18,5 @@ jobs:
         run: |
           npm install -g http-server @lhci/cli@0.8.x
           lhci autorun
+        env:
+          LHCI_GITHUB_APP_TOKEN: ${{secrets.LIGHTHOUSE_APP_TOKEN}}
