--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,35 @@
 {
-  "extends": ["airbnb", "prettier"],
-  "plugins": ["prettier"],
-  "rules": {
-    "prettier/prettier": ["error"],
-    "no-unused-vars": "warn"
-  },
-  "parserOptions": {
-    "ecmaVersion": 2020
-  },
-  "env": {
-    "browser": true
-  }
+    "env": {
+        "browser": true,
+        "es2021": true
+    },
+    "extends": [
+        "airbnb",
+        "airbnb-typescript",
+        "prettier"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": "latest",
+        "sourceType": "module",
+        "project": "./tsconfig.eslint.json"
+    },
+    "plugins": [
+        "prettier"
+    ],
+    "rules": {
+        "prettier/prettier": "error",
+        "react/jsx-filename-extension": [
+            1,
+            { "extensions": [".ts", ".tsx"]}
+        ],
+        // https://github.com/jsx-eslint/eslint-plugin-react/blob/master/docs/rules/function-component-definition.md
+        "react/function-component-definition": ["error", {
+            "namedComponents": ["arrow-function", "function-expression"]
+        }],
+        "no-restricted-exports": ["warn", { "restrictedNamedExports": ["default"] }]
+    }
 }
