--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@
 
 # testing
 /coverage
-/cypress/integration/examples
 
 # production
 /build
@@ -24,3 +23,5 @@ yarn-debug.log*
 yarn-error.log*
 
 .lighthouseci
+/lighthouseci
+/.lighthouseci
