--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wsf-portfolio",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
@@ -8,11 +8,7 @@
     "test": "react-scripts test",
     "lighthouse": "lhci autorun",
     "local-build": "http-server ./build -p 4000",
-    "cypress:open": "./node_modules/.bin/cypress open",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -27,36 +23,33 @@
     ]
   },
   "dependencies": {
-    "@lhci/cli": "^0.9.0",
-    "@material-ui/core": "^4.1.3",
-    "@material-ui/icons": "^4.2.1",
-    "google-map-react": "^1.1.4",
-    "http-server": "^14.1.0",
-    "lodash": "^4.17.21",
-    "prop-types": "^15.7.2",
-    "react": "^16.8.6",
-    "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^16.8.6",
-    "react-event-timeline": "^1.6.3",
-    "react-ga": "^2.6.0",
-    "react-helmet": "^5.2.1",
-    "react-icons": "^3.7.0",
-    "react-lazyload": "^2.6.2",
-    "react-responsive-carousel": "^3.2.9",
-    "react-responsive-picture": "^3.1.1",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "^4.0.0",
-    "react-scroll-parallax": "^2.1.2"
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
-    "cypress": "^4.12.1",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.2",
-    "prettier": "^1.18.2",
-    "react-snap": "^1.23.0"
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.2.0",
+    "@types/jest": "^27.5.1",
+    "@types/node": "^17.0.36",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "eslint": "^8.16.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "prettier": "^2.6.2",
+    "typescript": "^4.7.2"
   }
 }
