- Add Avatar component - Remove body transition - Refactor fixed units to relative units - Add AppBar action buttons - Add hex-rgb dep - Add new named avatar images - Add scroll to AppBar Menu - Update theme with z-index, border-radius, and transition speeds

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "framer-motion": "^6.3.6",
+    "hex-rgb": "^5.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
