--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "framer-motion": "^6.3.6",
-    "hex-rgb": "^5.0.0",
+    "hex-to-rgba": "^2.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
