--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "swiper": "^8.3.1"
   },
   "devDependencies": {
     "@testing-library/user-event": "^14.2.0",
