--- a/package.json
+++ b/package.json
@@ -25,14 +25,15 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "framer-motion": "^6.3.6",
-    "hex-rgb": "^5.0.0",
+    "hex-to-rgba": "^2.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "swiper": "^8.3.1"
   },
   "devDependencies": {
     "@testing-library/user-event": "^14.2.0",
